web-infras/parser/tests/fixtures/babel/core/create-parenthesized-expressions/invalid-pattern-in-rest-binding/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,7)
1|([...(a)]) => {}
 |     ^
